@@ -6395,6 +6395,133 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
+DECL|method|verifyUsesDefaultCodec
+specifier|public
+name|void
+name|verifyUsesDefaultCodec
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|,
+name|String
+name|name
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+name|DirectoryReader
+name|r
+init|=
+name|DirectoryReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|AtomicReaderContext
+name|context
+range|:
+name|r
+operator|.
+name|leaves
+argument_list|()
+control|)
+block|{
+name|SegmentReader
+name|air
+init|=
+operator|(
+name|SegmentReader
+operator|)
+name|context
+operator|.
+name|reader
+argument_list|()
+decl_stmt|;
+name|Codec
+name|codec
+init|=
+name|air
+operator|.
+name|getSegmentInfo
+argument_list|()
+operator|.
+name|info
+operator|.
+name|getCodec
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"codec used in "
+operator|+
+name|name
+operator|+
+literal|" ("
+operator|+
+name|codec
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|") is not a default codec (does not begin with Lucene)"
+argument_list|,
+name|codec
+operator|.
+name|getName
+argument_list|()
+operator|.
+name|startsWith
+argument_list|(
+literal|"Lucene"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testAllIndexesUseDefaultCodec
+specifier|public
+name|void
+name|testAllIndexesUseDefaultCodec
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+for|for
+control|(
+name|String
+name|name
+range|:
+name|oldNames
+control|)
+block|{
+name|Directory
+name|dir
+init|=
+name|oldIndexDirs
+operator|.
+name|get
+argument_list|(
+name|name
+argument_list|)
+decl_stmt|;
+name|verifyUsesDefaultCodec
+argument_list|(
+name|dir
+argument_list|,
+name|name
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 DECL|method|testNumericFields
 specifier|public
 name|void
@@ -7724,6 +7851,13 @@ argument_list|(
 name|oldIndexDir
 argument_list|)
 decl_stmt|;
+name|verifyUsesDefaultCodec
+argument_list|(
+name|dir
+argument_list|,
+name|moreTermsIndex
+argument_list|)
+expr_stmt|;
 comment|// TODO: more tests
 name|TestUtil
 operator|.
@@ -8022,6 +8156,13 @@ argument_list|(
 name|oldIndexDir
 argument_list|)
 decl_stmt|;
+name|verifyUsesDefaultCodec
+argument_list|(
+name|dir
+argument_list|,
+name|dvUpdatesIndex
+argument_list|)
+expr_stmt|;
 name|verifyDocValues
 argument_list|(
 name|dir
